--- a/virtualization/vagrant_ansible_docker/dockerfiles/riak/README
+++ b/virtualization/vagrant_ansible_docker/dockerfiles/riak/README
@@ -15,3 +15,7 @@ access the running riak instance from the host with a web browser
 from the url "http://10.10.10.30:8098/riak/test". Also ssh swork with
 "ssh root@10.10.10.30 -p 10022", password is "basho" (given in the 
 Dockerfile).
+
+There's also a script file included which sets up the internal networking.
+It sets the riak image running in a static (visible only inside the docker
+container) IP of 10.1.1.2. The ssh port visible outside is 1002.
