--- a/virtualization/vagrant_ansible_docker/dockerfiles/cassandra/README
+++ b/virtualization/vagrant_ansible_docker/dockerfiles/cassandra/README
@@ -4,11 +4,22 @@ Build with:
 
 	sudo docker build -t test/cassandra .
 
-Start with:
+Note: To be able to run the cluster, you need to start the nodens DNS server first. From this folder
+it can be started with:
 
-	sudo docker run -p 9160:9160 -p 9042:9042 -h cassandra1 test/cassandra
+	../nodens/startNodens.sh
 
-Note: For now cassandra expects to find a seed node from "cassandra1", so it should be used as the host name for now.
+Start the Cassandra instances with:
+
+	./startCassandra <INSTANCE_NUMBER>
+
+First instance should be 1 so that the correct ports are exposed to the host. The memory limits have been
+configured to be quite small (max heap 128M) so that more simultaneous instances can be started. This 
+value can be changed in the Dockerfile.
+
+After subsequent instances are started they should join the ring automatically. Internally they are
+known with the names cassandraX.local, where X is the instance number. The ssh ports are exposed to
+the host as 111X with X being the instance number.
 
 Test with DataStax devcenter and point it to: 10.10.10.30 and it should work, try for example:
 
