--- a/virtualization/vagrant_docker/dockerfiles/core/README
+++ b/virtualization/vagrant_docker/dockerfiles/core/README
@@ -1,19 +1,18 @@
 This container includes the following:
-	- Consul (to be run in bootstrap mode as the Consul master node)
+	- Consul (runs in bootstrap mode as the Consul master node)
 	- Logstash 1.4.1
 	- ElasticSearch 1.1.1
-  - Nginx + Kibana
+	- Nginx + Kibana
 
-It will act as the main place to push the logs to using rsyslog. Kibana UI is
-exposed to the outside from port 80.
-
-It has a static IP address of 10.1.1.1 essentially replacing NodeNS
-container.
-
-Consul installation may later move to the parent container as all the nodes
-should be running Consul.
+Core acts as the place to push the logs to using rsyslog and also
+acts as the base container for Consul. The startup script names the
+container "core" and when it is linked in other containers (using
+the command line switch --link core:core) the other consul agents
+can connect to it using just the hostname "core".
 
 Consul UI can be found from the address http://10.10.10.30:8500/ui
+
+Kibana UI can be found from the address http://10.10.10.30
 
 TODO:
 	- Configure logstash to read local syslog messages on core
