--- a/virtualization/vagrant_ubuntu_docker/README
+++ b/virtualization/vagrant_ubuntu_docker/README
@@ -1,6 +1,6 @@
 This vagrant file will set up a Ubuntu 14.04 box on VirtualBox with
-local networking enabled that will run in 10.10.10.30. It will contain
-the docker executable which is pulled from the docker repository.
+local networking enabled that will run in 10.10.10.30. It contains
+a Docker environment and orchestration services.
 
 Prerequisites:
  - VirtualBox
@@ -24,19 +24,29 @@ Note: If you get an ssh error when provisioning, remove the relevant
 entries from the ~/.ssh/known_hosts file.
 
 After you have logged in, the dockerfiles for building the docker
-images can be found from ~/dockerfiles. Building and running the core
-image would be:
-  cd dockerfiles/core
-  sudo docker build -t test/core .
+images can be found from ~/dockerfiles.
+
+Building the files needed to run the Cassandra example happens by running:
+	./buildCassandra.sh
 
 Then you can list the images using:
   sudo docker images
 
+Starting the orchestrated cassandra example:
+	maestro -f cassandra.yaml start
+
+Status can be checked with:
+	maestro -f cassandra.yaml status
+
+Cluster can be stopped with:
+	maestro -f cassandra.yaml stop
+
 And start the core image with the supplied script or:
   sudo docker run -d -p 1000:22 -p 9200:9200 -p 80:80 -p 8500:8500 -h core --name core --dns 127.0.0.1 $IMAGE_NAME
 
-The -p options bind the ports to the container, so that then you can
-try accessing the running riak instance from the host with a web browser
-from the url "http://10.10.10.30:80" which displays the Kibana UI for
-LogStash. Also ssh should work with "ssh root@10.10.10.30 -p 1000" and the
-password "root" (given in the Dockerfile).
+Consul UI can be accessed with a browser at "http://10.10.10.30:8500/ui".
+
+Kibana (UI for Logstash) can be found at "http://10.10.10.30".
+
+If you want to ssh to the containers, the ports are 1000 for core, 1021-3 for cassandra and
+1121 for opscenter. Username and password for all is "root".
