--- a/virtualization/vagrant_ubuntu_docker/dockerfiles/cassandra/README
+++ b/virtualization/vagrant_ubuntu_docker/dockerfiles/cassandra/README
@@ -1,25 +1,16 @@
 Dockerfile for building Cassandra instances. Uses the Datastax community edition.
 
-Build with running the script or manually with:
+Build with running the script in the upper directory or manually with:
 
 	sudo docker build --rm -t test/cassandra .
 
-Note: To be able to run the cluster, you need to start the core server first. From this folder
-it can be started with:
-
-	../core/startCore.sh
-
-Start the Cassandra instances with:
-
-	./startCassandra <INSTANCE_NUMBER>
-
-First instance should be 1 so that the correct ports are exposed to the host. The memory limits have been
-configured to be quite small (max heap 64M) so that more simultaneous instances can be started. This 
-value can be changed in the Dockerfile. Instructions in minimizing the Cassandra memory footprint are 
-by John Berryman and can be found from http://architects.dzone.com/articles/building-perfect-cassandra.
+The memory limits have been configured to be quite small (max heap 64M) so that more simultaneous 
+instances can be started. This value can be changed in the Dockerfile. Instructions in minimizing 
+the Cassandra memory footprint are by John Berryman and can be found from 
+http://architects.dzone.com/articles/building-perfect-cassandra.
 
 After subsequent instances are started they should join the ring automatically. Internally they are
-known with the names cassandraX.local, where X is the instance number. The ssh ports are exposed to
+known with the names cassandraX.node.consul, where X is the instance number. The ssh ports are exposed to
 the host as 102X with X being the instance number.
 
 Test with DataStax devcenter and point it to: 10.10.10.30 and it should work, try for example:
