--- a/virtualization/vagrant_ubuntu_docker/dockerfiles/core/README
+++ b/virtualization/vagrant_ubuntu_docker/dockerfiles/core/README
@@ -1,8 +1,9 @@
 This container includes the following:
-	- Consul (runs in bootstrap mode as the Consul master node)
-	- Logstash 1.4.1
+	- Consul 0.3.0 (runs in bootstrap mode as the Consul master node)
+	- Consul UI 0.3.0
+	- Logstash 1.4.2
 	- ElasticSearch 1.1.1
-	- Nginx + Kibana
+	- Nginx + Kibana 3.0.1
 
 Core acts as the place to push the logs to using rsyslog and also
 acts as the base container for Consul. The startup script names the
@@ -10,7 +11,7 @@ container "core" and when it is linked in other containers (using
 the command line switch --link core:core) the other consul agents
 can connect to it using just the hostname "core".
 
-Consul UI can be found from the address http://10.10.10.30:8500/ui
+Consul UI can be found from the address http://10.10.10.30:8500/ui/dist
 
 Kibana UI can be found from the address http://10.10.10.30
 
