--- a/virtualization/vagrant_ubuntu_docker/dockerfiles/cassandra/README
+++ b/virtualization/vagrant_ubuntu_docker/dockerfiles/cassandra/README
@@ -35,7 +35,5 @@ For programmatically getting the result (CoffeeScript):
 
 cql = require 'node-cassandra-cql'
 client = new cql.Client({hosts:['cassandra.service.consul'],keyspace: 'demo'})
-client.execute "SELECT * FROM demo.users where userid = ?", ['ile'], (err, result) ->
-        throw err if err
-        console.log "Result: " + result.rows[0].firstname
-        process.exit 0
+client.execute 'SELECT * FROM demo.users where userid = ?', ['ile'], (err, result) ->
+        console.log 'Result: ' + result.rows[0].firstname
