Modified the bare-container to be a template. Added comments and README files for the template container.

--- a/virtualization/vagrant_ubuntu_docker/dockerfiles/cassandra/README
+++ b/virtualization/vagrant_ubuntu_docker/dockerfiles/cassandra/README
@@ -26,6 +26,7 @@ CREATE TABLE demo.users (
 
 
 INSERT INTO demo.users (userid, firstname, lastname) VALUES ('ile','Ilkka','Anttonen');
+INSERT INTO demo.users (userid, firstname, lastname) VALUES ('toinen','Some','User');
 
 SELECT * FROM demo.users where userid = 'ile';
 
